log
Fri, May  2, 2025  8:10:10 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
5729e4d
Fri, May  2, 2025  8:10:49 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
752d671
Fri, May  2, 2025  8:24:04 PM: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  4|7
total_score: 5/70
14a6fcc
Fri, May  2, 2025  8:24:59 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
b7b9cf6
Fri, May  2, 2025  8:26:08 PM: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
8307386
Fri, May  2, 2025  8:26:28 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
6add7a2
Fri, May  2, 2025  8:28:49 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 5/70
ac741c1
Fri, May  2, 2025  8:29:22 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
6d4981a
Fri, May  2, 2025  9:06:20 PM: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  10|6
total_score: 15/70
882a34e
Fri, May  2, 2025  9:08:03 PM: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
88d94a6
Fri, May  2, 2025  9:08:55 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
3b0ad35
Fri, May  2, 2025  9:10:39 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
a213aea
Fri, May  2, 2025  9:11:27 PM: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
fed74fe
Fri, May  2, 2025  9:14:31 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
a133fd8
Fri, May  2, 2025  9:31:03 PM: 
 treemap.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
 tests:  0|0
total_score: 30/70
7fa4776
Fri, May  2, 2025  9:35:03 PM: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
327c1f7
Fri, May  2, 2025  9:47:12 PM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:118:21: error: stray '\303' in program
         TreeNode* niño = NULL;
                     ^
treemap.c:118:22: error: stray '\261' in program
         TreeNode* niño = NULL;
                      ^
treemap.c:118:23: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'o'
         TreeNode* niño = NULL;
                       ^
treemap.c:118:23: error: 'o' undeclared (first use in this function)
treemap.c:118:23: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:120:15: error: stray '\303' in program
             niño = aux->left;
               ^
treemap.c:120:16: error: stray '\261' in program
             niño = aux->left;
                ^
treemap.c:120:13: error: unknown type name 'ni'
             niño = aux->left;
             ^~
treemap.c:120:21: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
             niño = aux->left;
                     ^~~
treemap.c:120:17: error: unused variable 'o' [-Werror=unused-variable]
             niño = aux->left;
                 ^
treemap.c:122:15: error: stray '\303' in program
             niño = aux->right;
               ^
treemap.c:122:16: error: stray '\261' in program
             niño = aux->right;
                ^
treemap.c:122:13: error: unknown type name 'ni'
             niño = aux->right;
             ^~
treemap.c:122:21: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
             niño = aux->right;
                     ^~~
treemap.c:122:17: error: unused variable 'o' [-Werror=unused-variable]
             niño = aux->right;
                 ^
treemap.c:126:29: error: stray '\303' in program
             padre->left = niño;
                             ^
treemap.c:126:30: error: stray '\261' in program
             padre->left = niño;
                              ^
treemap.c:126:27: error: 'ni' undeclared (first use in this function)
             padre->left = niño;
                           ^~
treemap.c:126:31: error: expected ';' before 'o'
             padre->left = niño;
                               ^
treemap.c:128:30: error: stray '\303' in program
             padre->right = niño;
                              ^
treemap.c:128:31: error: stray '\261' in program
             padre->right = niño;
                               ^
treemap.c:128:32: error: expected ';' before 'o'
             padre->right = niño;
                                ^
cc1.exe: all warnings being treated as errors
de0f28b
Fri, May  2, 2025  9:47:58 PM: 
 treemap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  16|4
total_score: 30/70
9e01580
Fri, May  2, 2025  9:49:46 PM: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
94e2261
Fri, May  2, 2025  9:55:01 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  17|4
total_score: 35/70
6380ae2
Fri, May  2, 2025 10:07:02 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  18|3
total_score: 40/70
bfe5f06
Sat, May  3, 2025  6:55:04 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  19|3
total_score: 40/70
446e0a0
Sat, May  3, 2025  7:01:43 PM: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  18|3
total_score: 40/70
ff370b3
Sat, May  3, 2025  7:02:05 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
0c171f3
Sat, May  3, 2025  7:17:59 PM: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:185:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return minimum(aux->right);
                ^~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
8b3c74d
